error messages font size fixed for mobile view

--- a/src/styles/components/_stay-connected.scss
+++ b/src/styles/components/_stay-connected.scss
@@ -137,6 +137,10 @@
 
     .form__control .form__control-error {
     top: 86%;
+    font-size: 14px;
+    @media screen and (min-width:740px) {
+    font-size: 1rem;
+    }
     }
 
     #custom-error{
