--- a/src/components/EnterSite.astro
+++ b/src/components/EnterSite.astro
@@ -9,7 +9,7 @@ import Media from "./Enter-Site/Media.astro";
     <div class="grid">
         <div class="grid__content-wrapper">
             <div class="grid__content">
-                <div class="wrapper">
+                <div class="wrapper xl:wrapper--small xl:only-left">
                     <Headings />
                     <Buttons />
                     <Form />
