--- a/src/styles/settings/_layouts.scss
+++ b/src/styles/settings/_layouts.scss
@@ -1,6 +1,7 @@
 :root {
     --wrapper-margin: 1.5rem;
     --wrapper-max-width: calc(100% - var(--wrapper-margin));
+    --wrapper-min-width: calc(100% - (var(--wrapper-margin) / 2));
 
     @media screen and (min-width: 428px) {
         --wrapper-margin: 2rem;
@@ -16,10 +17,12 @@
 
     @media screen and (min-width: 1366px) {
         --wrapper-margin: 5.2813rem;
+        --wrapper-min-width: calc(100% - (var(--wrapper-margin) / 3));
     }
 
     @media screen and (min-width: 1400px) {
         --wrapper-margin: 8.5625rem;
+        --wrapper-min-width: calc(100% - (var(--wrapper-margin) / 4));
     }
 }
 
@@ -28,6 +31,10 @@
     margin: 0 auto;
     width: 100%;
     max-width: var(--wrapper-max-width);
+
+    &--small {
+        max-width: var(--wrapper-min-width);
+    }
 
     &--only-left {
         max-width: calc(100% - (var(--wrapper-margin) / 2));
@@ -39,6 +46,19 @@
         max-width: calc(100% - (var(--wrapper-margin) / 2));
         margin-left: 0;
         margin-right: auto;
+    }
+
+    &.xl\: {
+        @media screen and (min-width: 1440px) {
+            &wrapper--small {
+                max-width: var(--wrapper-min-width);
+            }
+
+            &only-left {
+                margin-left: auto;
+                margin-right: 0;
+            }
+        }
     }
 
     @media screen and (min-width: 1600px) {
