--- a/src/styles/components/_patient-case-file.scss
+++ b/src/styles/components/_patient-case-file.scss
@@ -58,6 +58,8 @@
 .patient__case_files {
   // scroll margin top
   scroll-padding-top: 10rem;
+  margin: 0 auto;
+  max-width: 700px;
 }
 
 .patients__case_file_item {
