Add styles to bullet lists

--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -36,6 +36,10 @@
       margin-bottom: 1rem
     }
 
+    ul {
+      margin-bottom: 1rem;
+    }
+
     .item,
     .sub-item {
       font-family: 'Barlow';
