--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -964,6 +964,7 @@
 
             &:first-of-type {
                 margin-bottom: 1.5rem;
+
                 @media screen and (min-width: 500px) {
                     margin-bottom: 3rem;
                 }
@@ -1089,6 +1090,261 @@
 }
 
 // -------------------------- ALPD Academy page ---------------------------------------------------
+
+// -------------------------- Indentifying HPP page ---------------------------------------------------
+.identifying-hpp-page {
+
+    .identifying-hpp-page__alp-reference-range {
+
+        .cta {
+            padding-top: 0;
+
+            .variant-2 {
+                @media screen and (min-width: 1024px) {
+                    background-image: none;
+                }
+            }
+
+            .cta__text {
+                max-width: 20rem;
+                margin-left: auto;
+                margin-right: auto;
+
+                @media screen and (min-width: 1024px) {
+                    font-size: 1.375rem;
+                    line-height: 30.8px;
+                }
+            }
+        }
+
+        .alp-reference-range__title {
+            font-family: "veneer", sans-serif;
+            color: $color-red;
+            font-weight: 400;
+            font-size: 1.875rem;
+            line-height: 33px;
+            text-transform: uppercase;
+
+            margin-bottom: 2rem;
+
+            @media screen and (min-width: 425px) {
+                text-align: center;
+            }
+
+            @media screen and (min-width: 768px) {
+                font-size: 3.5rem;
+                line-height: 56px;
+            }
+
+            @media screen and (min-width: 1024px) {
+                margin-bottom: 3rem;
+            }
+        }
+
+        .alp-reference-range__identify-wrapper {
+            position: relative;
+
+            img {
+                width: auto;
+            }
+
+            .asset__bg {
+                position: absolute;
+                z-index: 1;
+
+                display: none;
+
+                @media screen and (min-width: 1024px) {
+                    display: block;
+                }
+            }
+
+            .asset__bg--back {
+                height: 45rem;
+                top: auto;
+                bottom: 50%;
+                transform: translateY(50%);
+                left: 0;
+            }
+
+            .asset__bg--photos {
+                top: auto;
+                height: 34rem;
+                bottom: 50%;
+                transform: translateY(50%);
+                right: 0;
+            }
+
+            .asset__bg--text {
+                font-family: "veneer", sans-serif;
+                font-weight: 400;
+                z-index: 0;
+                color: $color-taupe;
+
+                &:first-of-type {
+                    font-size: 31.25rem;
+                    line-height: 31.25rem;
+
+                    left: -271px;
+                    top: -33px;
+                }
+
+                &:last-of-type {
+                    font-size: 12.5rem;
+                    line-height: 12.5rem;
+                    bottom: -106px;
+                    right: 30px;
+                }
+            }
+        }
+
+        .alp-reference-range__identify {
+            position: relative;
+            width: 100%;
+            max-width: 53.625rem;
+            margin-left: auto;
+            margin-right: auto;
+
+            z-index: 2;
+
+            &::before {
+                content: "";
+                background-image: url("/assets/images/identifying-hpp/tape.png");
+                background-repeat: no-repeat;
+                background-size: contain;
+
+                width: 10.8125rem;
+                height: 3.6875rem;
+
+                position: absolute;
+                z-index: 1;
+
+                left: 50%;
+                transform: translateX(-50%);
+
+                top: -25px;
+            }
+
+            .alp-reference-range__identify-bg {
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+
+                picture {
+                    height: 100%;
+
+                    img {
+                        object-fit: cover;
+                        object-position: center;
+                        height: inherit;
+                    }
+                }
+            }
+
+            .alp-reference-range__identify-content {
+                width: 100%;
+                height: auto;
+
+                padding-top: 4rem;
+                padding-bottom: 2rem;
+
+                @media screen and (min-width: 1024px) {
+                    padding-top: 6.5rem;
+                }
+
+                .wrapper {
+                    @media screen and (min-width: 1024px) {
+                        display: flex;
+                    }
+                }
+
+                .alp-reference-range__identify-icon {
+                    width: 2.9375rem;
+                    height: auto;
+                    margin: 0 auto;
+
+                    margin-bottom: 1rem;
+
+                    @media screen and (min-width: 1024px) {
+                        margin-bottom: 0;
+                        margin-right: 3rem;
+
+                        width: 4rem;
+                    }
+                }
+
+                p {
+                    font-weight: 400;
+                }
+
+                .alp-reference-range__identify-p1 {
+                    font-family: 'Special Elite', cursive;
+                    font-size: 1.25rem;
+                    line-height: 30px;
+                    margin-bottom: 1.25rem;
+
+                    &::after {
+                        content: "";
+                        background-image: url("/assets/images/identifying-hpp/red-line.png");
+                        background-repeat: no-repeat;
+                        background-size: contain;
+
+                        width: 150px;
+                        height: 20px;
+
+                        display: inline-block;
+
+                        @media screen and (min-width: 1024px) {
+                            display: block;
+                            width: 174px;
+                            height: 28px;
+
+                            transform: translateY(-7px);
+                        }
+                    }
+
+                    @media screen and (min-width: 1024px) {
+                        font-size: 1.5rem;
+                        line-height: 33.6px;
+                    }
+                }
+
+                .alp-reference-range__identify-p2 {
+                    line-height: 25.6px;
+                    margin-bottom: 1.25rem;
+
+                    @media screen and (min-width: 1024px) {
+                        font-size: 1.125rem;
+                        line-height: 25.2px;
+
+                        margin-bottom: 5rem;
+                    }
+                }
+
+                .alp-reference-range__identify-ul {
+                    li {
+                        list-style-type: none;
+                        position: relative;
+
+                        .positioned {
+                            position: absolute;
+                            top: 7px;
+                            left: -7px;
+                        }
+
+                        font-size: .875rem;
+                        line-height: 18.2px;
+                    }
+                }
+
+            }
+        }
+    }
+}
+
+// -------------------------- Indentifying HPP page ---------------------------------------------------
 
 /* 404 */
 .page__not_found {
