--- a/src/components/Navigation/FooterPrimaryNav.astro
+++ b/src/components/Navigation/FooterPrimaryNav.astro
@@ -13,7 +13,7 @@
       <a class="footer__nav_menu_item_link" href="#">Usual Suspects</a>
     </li>
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="#">Identifying HPP</a>
+      <a class="footer__nav_menu_item_link" href="/indentifying-hpp">Identifying HPP</a>
     </li>
   </ul>
 </nav>
