--- a/src/components/Navigation/HeaderPrimaryNavigation.astro
+++ b/src/components/Navigation/HeaderPrimaryNavigation.astro
@@ -14,7 +14,7 @@
         <a href="#" class="nav__menu_item_link">Usual Suspects</a>
       </li>
       <li class="nav__menu_item">
-        <a href="#" class="nav__menu_item_link">Identifying HPP</a>
+        <a href="/identifying-hpp" class="nav__menu_item_link">Identifying HPP</a>
       </li>
     </ul>
   </nav>
