Add Case Modal Component

--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -3,6 +3,7 @@ import Accordion from "../components/Accordion.astro";
 import Layout from "../layouts/Layout.astro";
 import CTA from "../components/CTA.astro";
 import Form from "../components/Form.astro";
+import CaseFileModal from "../components/Case-Files/CaseFileModal.astro";
 import "../styles/settings/_design.scss";
 ---
 
@@ -230,8 +231,12 @@ import "../styles/settings/_design.scss";
       <h1 class="title">Red string</h1>
       <div class="red-string"></div>
       <div class="elements">
-        <img class="fingerprint" src="/assets/images/footer-finger-print-2x.png" alt="">
-        <img class="red-frame" src="/assets/images/red-frame.png" alt="">
+        <img
+          class="fingerprint"
+          src="/assets/images/footer-finger-print-2x.png"
+          alt=""
+        />
+        <img class="red-frame" src="/assets/images/red-frame.png" alt="" />
       </div>
     </div>
   </section>
@@ -388,29 +393,62 @@ import "../styles/settings/_design.scss";
   <section class="design-system-section">
     <div class="section-wrapper section-wrapper--small">
       <h1 class="title">CTA VARIANTS</h1>
-      <div class="fonts-preview" style="background-color: black; display:block; padding:0; padding-top:30px">
+      <div
+        class="fonts-preview"
+        style="background-color: black; display:block; padding:0; padding-top:30px"
+      >
         <div>
           <h2 style="color: white; padding-left:30px;">VARIANT-1</h2>
-          <CTA variation="variant-1" buttonLabel="buttonLabel" content="Sample text" linkURL="#" bypassModal >
+          <CTA
+            variation="variant-1"
+            buttonLabel="buttonLabel"
+            content="Sample text"
+            linkURL="#"
+            bypassModal
+          />
+        </div>
+
+        <div
+          class="fonts-preview"
+          style="background-color: black; display:block; padding:0; padding-top:30px"
+        >
+          <div>
+            <h2 style="color: white; padding-left:30px;">VARIANT-2</h2>
+            <CTA
+              variation="variant-2"
+              buttonLabel="buttonLabel"
+              content="Sample text"
+              linkURL="#"
+              bypassModal
+            />
+          </div>
+
+          <div
+            class="fonts-preview"
+            style="background-color: black; display:block; padding:0; padding-top:30px"
+          >
+            <div>
+              <h2 style="color: white; padding-left:30px;">VARIANT-3</h2>
+              <CTA
+                variation="variant-3"
+                buttonLabel="buttonLabel"
+                content="Sample text"
+                linkURL="#"
+                bypassModal
+              />
+            </div>
           </div>
         </div>
-        
-        <div class="fonts-preview" style="background-color: black; display:block; padding:0; padding-top:30px">
-        <div>
-        <h2 style="color: white; padding-left:30px;">VARIANT-2</h2>
-        <CTA variation="variant-2" buttonLabel="buttonLabel" content="Sample text" linkURL="#" bypassModal >
-        </div>
       </div>
-        
-      <div class="fonts-preview" style="background-color: black; display:block; padding:0; padding-top:30px">
-        <div>
-        <h2 style="color: white; padding-left:30px;">VARIANT-3</h2>
-        <CTA variation="variant-3" buttonLabel="buttonLabel" content="Sample text" linkURL="#" bypassModal >
-        </div>
-      </div>
-        
-      
-      </div>  
+    </div>
   </section>
-  
+  <section class="design-system-section">
+    <div class="section-wrapper section-wrapper--small">
+      <h1 class="title">Case Modal Mobile</h1>
+      <button class="button button--custom-bg case-files-modal-trigger"
+        >View Patient case files</button
+      >
+      <CaseFileModal />
+    </div>
+  </section>
 </Layout>
